feat: add movies page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="container mx-auto px-4 py-4 flex lg:flex-row md:flex-row flex-col lg:space-y-0 md:space-y-0 space-y-4 justify-between items-center">
             <div class="text-red-600 text-3xl font-bold">NETFLIX</div>
             <div class="hidden md:flex flex-row gap-4">
-                <a href="#" class="hover:text-gray-300">Home</a>
-                <a href="#" class="hover:text-gray-300">TV Shows</a>
+                <a href="./index.html" class="hover:text-gray-300">Home</a>
+                <a href="./movie.html" class="hover:text-gray-300">Movies</a>
                 <a href="#" class="hover:text-gray-300">My List</a>
             </div>
             <div class="hidden md:flex"><a href="#" class="hover:text-gray-300">Profile</a></div>
